Finish static pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,16 @@
-<center>
-<h1><u>StaticPages#help</u></h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
-</center>
+<% provide(:title, 'Help') %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <h1>Help</h1>
+    <p>
+      Get help on the Ruby on Rails Tutorial at the
+      <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
+      To get help on this sample app, see the
+      <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+    </p>
+  </body>
+</html>
